--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <title>IitbApp</title>
   <base href="/">
 
+  <link rel="manifest" href="/assets/manifest.json">
+  <meta name="theme-color" content="#7b1fa2">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
