--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <link rel="manifest" href="/assets/manifest.json">
-  <meta name="theme-color" content="#7b1fa2">
+  <meta name="theme-color" content="#4DB6AC">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
