--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>IitbApp</title>
+  <title>IITB-App</title>
   <base href="/">
 
   <link rel="manifest" href="/assets/manifest.json">
