--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
   <meta name="msapplication-TileColor" content="#4DB6AC">
   <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
 
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
