--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <meta name="msapplication-TileColor" content="#4DB6AC">
   <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
 
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
