--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,7 @@
   <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
 
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="no">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
