--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,102 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body style="margin:0;">
-  <app-root></app-root>
+
+<style>
+  html {
+    overflow-y: hidden;
+    overflow-x: hidden;
+  }
+
+  body {
+    background-color: #e9ebee;
+    margin: 0;
+  }
+
+  .loading-spinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .mat-elevation-z2 {
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12); }
+
+  .spinner {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    margin: 0;
+    text-align: center;
+    font-size: 0;
+    padding: 20px;
+    background-color: white;
+  }
+
+  .spinner > div {
+      background-color: #673AB7;
+      height: 100%;
+      transform: scale(1, 0.5);
+
+      width: 6px;
+      display: inline-block;
+
+      margin: 0;
+      padding: 0;
+      margin-right: 3px;
+
+      -webkit-animation: spinner 1s infinite ease-in-out;
+      animation: spinner 1    s infinite ease-in-out;
+  }
+
+  .spinner .rect2 {
+      -webkit-animation-delay: 0.09s;
+      animation-delay: 0.09s;
+  }
+
+  .spinner .rect3 {
+      -webkit-animation-delay: 0.18s;
+      animation-delay: 0.18s;
+  }
+
+  .spinner .rect4 {
+      -webkit-animation-delay: 0.27s;
+      animation-delay: 0.27s;
+  }
+
+  .spinner .rect5 {
+      -webkit-animation-delay: 0.27s;
+      animation-delay: 0.36s;
+  }
+
+  @keyframes spinner {
+      0% {
+        transform: scale(1, 0.5);
+      }
+      20% {
+        transform: scale(1, 1.1);
+      }
+      40% {
+        transform: scale(1, 0.5);
+      }
+      100% {
+          transform: scale(1, 0.5);
+      }
+  }
+</style>
+
+<body>
+  <app-root>
+  </app-root>
+  <div class="loading-spinner">
+      <div class="spinner mat-elevation-z2">
+        <div class="rect1"></div>
+        <div class="rect2"></div>
+        <div class="rect3"></div>
+        <div class="rect4"></div>
+        <div class="rect5"></div>
+      </div>
+    </div>
 </body>
 </html>
