--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <meta name="description" content="InstiApp IIT Bombay">
+  <meta property="og:description" content="InstiApp IIT Bombay" />
+
+  <meta property="og:title" content="InstiApp" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://insti.app" />
+  <meta property="og:image" content="https://insti.app/assets/logo.png" />
+  <meta property="og:site_name" content="InstiApp">
 </head>
 
 <style>
