--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
     background-color: #e9ebee;
     margin: 0;
     --primary-color: #673AB7;
+    --warn-color: #ff5722;
   }
 
   .loading-spinner {
