Change to new theme

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#673AB7">
+  <meta name="theme-color" content="#536dfe">
 
   <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/icons/apple-icon-60x60.png">
@@ -21,7 +21,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
-  <meta name="msapplication-TileColor" content="#673AB7">
+  <meta name="msapplication-TileColor" content="#536dfe">
   <meta name="msapplication-TileImage" content="assets/icons/ms-icon-144x144.png">
 
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -50,7 +50,7 @@
   body {
     background-color: #e9ebee;
     margin: 0;
-    --primary-color: #673AB7;
+    --primary-color: #536dfe;
     --warn-color: #ff5722;
   }
 
