Change body background to white in index

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
   }
 
   body {
-    background-color: #e9ebee;
+    background-color: white;
     margin: 0;
     --primary-color: #536dfe;
     --warn-color: #ff5722;
