--- a/src/index.html
+++ b/src/index.html
@@ -41,103 +41,72 @@
   <meta property="og:site_name" content="InstiApp">
 </head>
 
-<style>
-  html {
-    overflow-y: scroll;
-    overflow-x: hidden;
-  }
-
-  body {
-    background-color: white;
-    margin: 0;
-    --primary-color: #536dfe;
-    --warn-color: #ff5722;
-  }
-
-  .loading-spinner {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  .mat-elevation-z2 {
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12); }
-
-  .spinner {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    margin: 0;
-    text-align: center;
-    font-size: 0;
-    padding: 20px;
-    background-color: white;
-  }
-
-  .spinner > div {
-      background-color: var(--primary-color);
-      height: 100%;
-      transform: scale(1, 0.5);
-
-      width: 6px;
-      display: inline-block;
-
-      margin: 0;
-      padding: 0;
-      margin-right: 3px;
-
-      -webkit-animation: spinner 1s infinite ease-in-out;
-      animation: spinner 1    s infinite ease-in-out;
-  }
-
-  .spinner .rect2 {
-      -webkit-animation-delay: 0.09s;
-      animation-delay: 0.09s;
-  }
-
-  .spinner .rect3 {
-      -webkit-animation-delay: 0.18s;
-      animation-delay: 0.18s;
-  }
-
-  .spinner .rect4 {
-      -webkit-animation-delay: 0.27s;
-      animation-delay: 0.27s;
-  }
-
-  .spinner .rect5 {
-      -webkit-animation-delay: 0.27s;
-      animation-delay: 0.36s;
-  }
-
-  @keyframes spinner {
-      0% {
-        transform: scale(1, 0.5);
-      }
-      20% {
-        transform: scale(1, 1.1);
-      }
-      40% {
-        transform: scale(1, 0.5);
-      }
-      100% {
-          transform: scale(1, 0.5);
-      }
-  }
-</style>
-
 <body>
+  <style>
+    html {
+      overflow-y: scroll;
+      overflow-x: hidden;
+    }
+
+    body {
+      background-color: white;
+      margin: 0;
+      --primary-color: #536dfe;
+      --warn-color: #ff5722;
+    }
+
+    .loading-fader {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, calc(-50% - 85px));
+      z-index: 100;
+    }
+
+    .loading-fader > img {
+      height: 110px;
+      transform-origin: bottom;
+      opacity: 0.15;
+      position: absolute;
+      -webkit-animation: spinner 2s infinite ease-in-out;
+      animation: spinner 2s infinite ease-in-out;
+    }
+
+    .p1 { transform: rotate(67deg); }
+    .p2 { transform: rotate(45deg); }
+    .p3 { transform: rotate(20deg); }
+    .p4 { transform: rotate(00deg); }
+    .p5 { transform: rotate(-20deg); }
+    .p6 { transform: rotate(-45deg); }
+    .p7 { transform: rotate(-67deg); }
+
+    .loading-fader .p7 { -webkit-animation-delay: 0.09s; animation-delay: 0.09s; }
+    .loading-fader .p6 { -webkit-animation-delay: 0.18s; animation-delay: 0.18s; }
+    .loading-fader .p5 { -webkit-animation-delay: 0.27s; animation-delay: 0.27s; }
+    .loading-fader .p4 { -webkit-animation-delay: 0.36s; animation-delay: 0.36s; }
+    .loading-fader .p3 { -webkit-animation-delay: 0.45s; animation-delay: 0.45s; }
+    .loading-fader .p2 { -webkit-animation-delay: 0.54s; animation-delay: 0.54s; }
+    .loading-fader .p1 { -webkit-animation-delay: 0.63s; animation-delay: 0.63s; }
+
+    @keyframes spinner {
+      0% { opacity: 0.15;}
+      25% { opacity: 0.55; }
+      50% { opacity: 0.4; }
+      70% { opacity: 0.15; }
+      100% { opacity: 0.15; }
+    }
+  </style>
+
   <app-root>
-    <div class="loading-spinner">
-        <div class="spinner mat-elevation-z2">
-          <div class="rect1"></div>
-          <div class="rect2"></div>
-          <div class="rect3"></div>
-          <div class="rect4"></div>
-          <div class="rect5"></div>
-        </div>
-      </div>
+    <div class="loading-fader">
+      <img class="p1" src="assets/petal.svg">
+      <img class="p2" src="assets/petal.svg">
+      <img class="p3" src="assets/petal.svg">
+      <img class="p4" src="assets/petal.svg">
+      <img class="p5" src="assets/petal.svg">
+      <img class="p6" src="assets/petal.svg">
+      <img class="p7" src="assets/petal.svg">
+    </div>
   </app-root>
 </body>
 </html>
