--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,9 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, calc(-50% - 85px));
+      height: 150px;
+      width: 50px;
+      transform: translate(-50%, calc(-50%));
       z-index: 100;
     }
 
