Implement new design for follow buttons on body

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
       background-color: white;
       margin: 0;
       --primary-color: #536dfe;
+      --accent-color: #ffd740;
       --warn-color: #ff5722;
     }
 
