--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
       --primary-color: #536dfe;
       --accent-color: #ffd740;
       --warn-color: #ff5722;
+      --primary-dark: #0043ca;
     }
 
     .loading-fader {
