--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>InstiApp</title>
+  <title>InstiApp | IIT Bombay</title>
   <base href="/">
 
   <link rel="manifest" href="manifest.json">
