Add polyfills for IE11

--- a/src/index.html
+++ b/src/index.html
@@ -47,13 +47,16 @@
       overflow-x: hidden;
     }
 
-    body {
-      background-color: white;
-      margin: 0;
+    :root {
       --primary-color: #536dfe;
       --accent-color: #ffd740;
       --warn-color: #ff5722;
       --primary-dark: #0043ca;
+    }
+
+    body {
+      background-color: white;
+      margin: 0;
     }
 
     .loading-fader {
