perf(styles): Change roboto import to link in index

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
   <meta property="og:url" content="https://insti.app" />
   <meta property="og:image" content="https://insti.app/assets/logo.png" />
   <meta property="og:site_name" content="InstiApp">
+
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400">
 </head>
 
 <body>
