feat(qr): Add QR code scanner

--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,7 @@
       window.angularAppComponentRef.extNavigateURL(url.pathname + url.search)
       return true;
     }
+    window.jumpToUrl = jumpToUrl;
   </script>
 </body>
 </html>
