--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,8 @@
 
   <meta property="og:title" content="InstiApp" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://insti.app" />
-  <meta property="og:image" content="https://insti.app/assets/logo.png" />
+  <meta property="og:url" content="https://www.insti.app" />
+  <meta property="og:image" content="https://www.insti.app/assets/logo.png" />
   <meta property="og:site_name" content="InstiApp">
 </head>
 
