fix: change css class names for logo animation

--- a/src/index.html
+++ b/src/index.html
@@ -78,21 +78,21 @@
       animation: spinner 2s infinite ease-in-out;
     }
 
-    .logo1 { transform: rotate(67deg); }
-    .logo2 { transform: rotate(45deg); }
-    .logo3 { transform: rotate(20deg); }
-    .logo4 { transform: rotate(00deg); }
-    .logo5 { transform: rotate(-20deg); }
-    .logo6 { transform: rotate(-45deg); }
-    .logo7 { transform: rotate(-67deg); }
+    .logo-instiapp-1 { transform: rotate(67deg); }
+    .logo-instiapp-2 { transform: rotate(45deg); }
+    .logo-instiapp-3 { transform: rotate(20deg); }
+    .logo-instiapp-4 { transform: rotate(00deg); }
+    .logo-instiapp-5 { transform: rotate(-20deg); }
+    .logo-instiapp-6 { transform: rotate(-45deg); }
+    .logo-instiapp-7 { transform: rotate(-67deg); }
 
-    .loading-fader .logo7 { -webkit-animation-delay: 0.09s; animation-delay: 0.09s; }
-    .loading-fader .lgoo6 { -webkit-animation-delay: 0.18s; animation-delay: 0.18s; }
-    .loading-fader .logo5 { -webkit-animation-delay: 0.27s; animation-delay: 0.27s; }
-    .loading-fader .logo4 { -webkit-animation-delay: 0.36s; animation-delay: 0.36s; }
-    .loading-fader .logo3 { -webkit-animation-delay: 0.45s; animation-delay: 0.45s; }
-    .loading-fader .logo2 { -webkit-animation-delay: 0.54s; animation-delay: 0.54s; }
-    .loading-fader .logo1 { -webkit-animation-delay: 0.63s; animation-delay: 0.63s; }
+    .loading-fader .logo-instiapp-7 { -webkit-animation-delay: 0.09s; animation-delay: 0.09s; }
+    .loading-fader .logo-instiapp-6 { -webkit-animation-delay: 0.18s; animation-delay: 0.18s; }
+    .loading-fader .logo-instiapp-5 { -webkit-animation-delay: 0.27s; animation-delay: 0.27s; }
+    .loading-fader .logo-instiapp-4 { -webkit-animation-delay: 0.36s; animation-delay: 0.36s; }
+    .loading-fader .logo-instiapp-3 { -webkit-animation-delay: 0.45s; animation-delay: 0.45s; }
+    .loading-fader .logo-instiapp-2 { -webkit-animation-delay: 0.54s; animation-delay: 0.54s; }
+    .loading-fader .logo-instiapp-1 { -webkit-animation-delay: 0.63s; animation-delay: 0.63s; }
 
     @keyframes spinner {
       0% { opacity: 0.15;}
@@ -105,13 +105,13 @@
 
   <app-root>
     <div class="loading-fader">
-      <img class="logo1" src="assets/petal.svg">
-      <img class="logo2" src="assets/petal.svg">
-      <img class="logo3" src="assets/petal.svg">
-      <img class="logo4" src="assets/petal.svg">
-      <img class="logo5" src="assets/petal.svg">
-      <img class="logo6" src="assets/petal.svg">
-      <img class="logo7" src="assets/petal.svg">
+      <img class="logo-instiapp-1" src="assets/petal.svg">
+      <img class="logo-instiapp-2" src="assets/petal.svg">
+      <img class="logo-instiapp-3" src="assets/petal.svg">
+      <img class="logo-instiapp-4" src="assets/petal.svg">
+      <img class="logo-instiapp-5" src="assets/petal.svg">
+      <img class="logo-instiapp-6" src="assets/petal.svg">
+      <img class="logo-instiapp-7" src="assets/petal.svg">
     </div>
   </app-root>
 
