refactor: remove css prop dupl for logo anim

--- a/src/index.html
+++ b/src/index.html
@@ -78,21 +78,13 @@
       animation: spinner 2s infinite ease-in-out;
     }
 
-    .logo-instiapp-1 { transform: rotate(67deg); }
-    .logo-instiapp-2 { transform: rotate(45deg); }
-    .logo-instiapp-3 { transform: rotate(20deg); }
-    .logo-instiapp-4 { transform: rotate(00deg); }
-    .logo-instiapp-5 { transform: rotate(-20deg); }
-    .logo-instiapp-6 { transform: rotate(-45deg); }
-    .logo-instiapp-7 { transform: rotate(-67deg); }
-
-    .loading-fader .logo-instiapp-7 { -webkit-animation-delay: 0.09s; animation-delay: 0.09s; }
-    .loading-fader .logo-instiapp-6 { -webkit-animation-delay: 0.18s; animation-delay: 0.18s; }
-    .loading-fader .logo-instiapp-5 { -webkit-animation-delay: 0.27s; animation-delay: 0.27s; }
-    .loading-fader .logo-instiapp-4 { -webkit-animation-delay: 0.36s; animation-delay: 0.36s; }
-    .loading-fader .logo-instiapp-3 { -webkit-animation-delay: 0.45s; animation-delay: 0.45s; }
-    .loading-fader .logo-instiapp-2 { -webkit-animation-delay: 0.54s; animation-delay: 0.54s; }
-    .loading-fader .logo-instiapp-1 { -webkit-animation-delay: 0.63s; animation-delay: 0.63s; }
+    .loading-fader .logo-instiapp-7 { transform: rotate(-67deg); -webkit-animation-delay: 0.09s; animation-delay: 0.09s; }
+    .loading-fader .logo-instiapp-6 { transform: rotate(-45deg); -webkit-animation-delay: 0.18s; animation-delay: 0.18s; }
+    .loading-fader .logo-instiapp-5 { transform: rotate(-20deg); -webkit-animation-delay: 0.27s; animation-delay: 0.27s; }
+    .loading-fader .logo-instiapp-4 { transform: rotate(00deg); -webkit-animation-delay: 0.36s; animation-delay: 0.36s; }
+    .loading-fader .logo-instiapp-3 { transform: rotate(20deg); -webkit-animation-delay: 0.45s; animation-delay: 0.45s; }
+    .loading-fader .logo-instiapp-2 { transform: rotate(45deg); -webkit-animation-delay: 0.54s; animation-delay: 0.54s; }
+    .loading-fader .logo-instiapp-1 { transform: rotate(67deg); -webkit-animation-delay: 0.63s; animation-delay: 0.63s; }
 
     @keyframes spinner {
       0% { opacity: 0.15;}
