refactor(spinner): move logic to xunk-spinner from index

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
       margin: 0;
     }
 
-    .instiapp-loading-fader {
+    #instiapp-loading-fader {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -70,7 +70,7 @@
       visibility: visible;
     }
 
-    .instiapp-loading-fader > img {
+    #instiapp-loading-fader > img {
       height: 88px;
       transform-origin: bottom;
       opacity: 0.15;
@@ -79,13 +79,13 @@
       animation: spinner 2s infinite ease-in-out;
     }
 
-    .instiapp-loading-fader .logo-instiapp-7 { transform: rotate(-67deg); -webkit-animation-delay: 0.09s; animation-delay: 0.09s; }
-    .instiapp-loading-fader .logo-instiapp-6 { transform: rotate(-45deg); -webkit-animation-delay: 0.18s; animation-delay: 0.18s; }
-    .instiapp-loading-fader .logo-instiapp-5 { transform: rotate(-20deg); -webkit-animation-delay: 0.27s; animation-delay: 0.27s; }
-    .instiapp-loading-fader .logo-instiapp-4 { transform: rotate(00deg); -webkit-animation-delay: 0.36s; animation-delay: 0.36s; }
-    .instiapp-loading-fader .logo-instiapp-3 { transform: rotate(20deg); -webkit-animation-delay: 0.45s; animation-delay: 0.45s; }
-    .instiapp-loading-fader .logo-instiapp-2 { transform: rotate(45deg); -webkit-animation-delay: 0.54s; animation-delay: 0.54s; }
-    .instiapp-loading-fader .logo-instiapp-1 { transform: rotate(67deg); -webkit-animation-delay: 0.63s; animation-delay: 0.63s; }
+    #instiapp-loading-fader .logo-instiapp-7 { transform: rotate(-67deg); -webkit-animation-delay: 0.09s; animation-delay: 0.09s; }
+    #instiapp-loading-fader .logo-instiapp-6 { transform: rotate(-45deg); -webkit-animation-delay: 0.18s; animation-delay: 0.18s; }
+    #instiapp-loading-fader .logo-instiapp-5 { transform: rotate(-20deg); -webkit-animation-delay: 0.27s; animation-delay: 0.27s; }
+    #instiapp-loading-fader .logo-instiapp-4 { transform: rotate(00deg); -webkit-animation-delay: 0.36s; animation-delay: 0.36s; }
+    #instiapp-loading-fader .logo-instiapp-3 { transform: rotate(20deg); -webkit-animation-delay: 0.45s; animation-delay: 0.45s; }
+    #instiapp-loading-fader .logo-instiapp-2 { transform: rotate(45deg); -webkit-animation-delay: 0.54s; animation-delay: 0.54s; }
+    #instiapp-loading-fader .logo-instiapp-1 { transform: rotate(67deg); -webkit-animation-delay: 0.63s; animation-delay: 0.63s; }
 
     @keyframes spinner {
       0% { opacity: 0.15;}
@@ -98,7 +98,7 @@
 
   <app-root></app-root>
 
-  <div class="instiapp-loading-fader">
+  <div id="instiapp-loading-fader">
     <img class="logo-instiapp-1" src="assets/petal.svg">
     <img class="logo-instiapp-2" src="assets/petal.svg">
     <img class="logo-instiapp-3" src="assets/petal.svg">
@@ -121,22 +121,8 @@
       return true;
     }
     window.jumpToUrl = jumpToUrl;
-
-    var instiAppSpinnerStack = [];
-    var instiAppSpinner = document.querySelector('.instiapp-loading-fader');
-    window.pushInstiAppSpinner = function(iden) {
-      if (instiAppSpinnerStack.indexOf(iden) !== -1) return;
-      instiAppSpinnerStack.push(iden);
-      instiAppSpinner.style.visibility = 'visible';
-    }
-    window.popInstiAppSpinner = function(iden) {
-      const i = instiAppSpinnerStack.indexOf(iden);
-      if (i === -1) return;
-      instiAppSpinnerStack.splice(i , 1);
-      if (instiAppSpinnerStack.length === 0) {
-        instiAppSpinner.style.visibility = 'hidden';
-      }
-    }
+    window.instiAppSpinnerStack = [];
+    window.instiAppSpinner = document.getElementById('instiapp-loading-fader');
   </script>
 </body>
 </html>
