refactor(spinner): specify height of petal relatively

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      height: 120px;
+      height: 88px;
       width: 40px;
       transform: translate(-50%, -50%);
       z-index: 100;
@@ -71,7 +71,7 @@
     }
 
     .instiapp-spinner > img {
-      height: 88px;
+      height: 100%;
       transform-origin: bottom;
       opacity: 0.15;
       position: absolute;
