--- a/src/index.html
+++ b/src/index.html
@@ -60,14 +60,26 @@
     }
 
     #instiapp-global-spinner {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      height: 88px;
-      width: 40px;
-      transform: translate(-50%, -50%);
-      z-index: 100;
+      position: fixed;
+      top: 50%; left: 50%;
+      height: 88px; width: 88px;
+      transform: translateY(-50%);
+      z-index: 200;
       visibility: visible;
+    }
+
+    #instiapp-global-spinner.list-spinner {
+      top: unset; bottom: 10%;
+      height: 35px; width: 35px;
+    }
+
+    .instiapp-spinner > .petal-bg {
+      background-color: white;
+      width: 230%;
+      height: 230%;
+      border-radius: 50%;
+      position: absolute;
+      transform: translate(-50%, -25%);
     }
 
     .instiapp-spinner > img {
@@ -79,13 +91,13 @@
       animation: spinner 2s infinite ease-in-out;
     }
 
-    .instiapp-spinner .petal-7 { transform: rotate(-67deg); -webkit-animation-delay: 0.09s; animation-delay: 0.09s; }
-    .instiapp-spinner .petal-6 { transform: rotate(-45deg); -webkit-animation-delay: 0.18s; animation-delay: 0.18s; }
-    .instiapp-spinner .petal-5 { transform: rotate(-20deg); -webkit-animation-delay: 0.27s; animation-delay: 0.27s; }
-    .instiapp-spinner .petal-4 { transform: rotate(00deg); -webkit-animation-delay: 0.36s; animation-delay: 0.36s; }
-    .instiapp-spinner .petal-3 { transform: rotate(20deg); -webkit-animation-delay: 0.45s; animation-delay: 0.45s; }
-    .instiapp-spinner .petal-2 { transform: rotate(45deg); -webkit-animation-delay: 0.54s; animation-delay: 0.54s; }
-    .instiapp-spinner .petal-1 { transform: rotate(67deg); -webkit-animation-delay: 0.63s; animation-delay: 0.63s; }
+    .instiapp-spinner .petal-7 { transform: translateX(-50%) rotate(-67deg); -webkit-animation-delay: 0.09s; animation-delay: 0.09s; }
+    .instiapp-spinner .petal-6 { transform: translateX(-50%) rotate(-45deg); -webkit-animation-delay: 0.18s; animation-delay: 0.18s; }
+    .instiapp-spinner .petal-5 { transform: translateX(-50%) rotate(-20deg); -webkit-animation-delay: 0.27s; animation-delay: 0.27s; }
+    .instiapp-spinner .petal-4 { transform: translateX(-50%) rotate(00deg); -webkit-animation-delay: 0.36s; animation-delay: 0.36s; }
+    .instiapp-spinner .petal-3 { transform: translateX(-50%) rotate(20deg); -webkit-animation-delay: 0.45s; animation-delay: 0.45s; }
+    .instiapp-spinner .petal-2 { transform: translateX(-50%) rotate(45deg); -webkit-animation-delay: 0.54s; animation-delay: 0.54s; }
+    .instiapp-spinner .petal-1 { transform: translateX(-50%) rotate(67deg); -webkit-animation-delay: 0.63s; animation-delay: 0.63s; }
 
     @keyframes spinner {
       0% { opacity: 0.15;}
@@ -99,6 +111,7 @@
   <app-root></app-root>
 
   <div id="instiapp-global-spinner" class="instiapp-spinner">
+    <div class="petal-bg"></div>
     <img class="petal-1" src="assets/petal.svg">
     <img class="petal-2" src="assets/petal.svg">
     <img class="petal-3" src="assets/petal.svg">
