--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,10 @@
       70% { opacity: 0.15; }
       100% { opacity: 0.15; }
     }
+
+    /* need to specify this here - workaround for static page width */
+    * { scrollbar-width: thin; }
+    ::-webkit-scrollbar { width: 6px; }
   </style>
 
   <app-root></app-root>
