--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>InstiApp | IIT Bombay</title>
@@ -17,10 +18,11 @@
   <link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="assets/icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="msapplication-TileColor" content="#536dfe">
   <meta name="msapplication-TileImage" content="assets/icons/ms-icon-144x144.png">
 
@@ -61,19 +63,23 @@
 
     #instiapp-global-spinner {
       position: fixed;
-      top: 50%; left: 50%;
-      height: 88px; width: 88px;
+      top: 50%;
+      left: 50%;
+      height: 88px;
+      width: 88px;
       transform: translateY(-50%);
       z-index: 200;
       visibility: visible;
     }
 
     #instiapp-global-spinner.list-spinner {
-      top: unset; bottom: 10%;
-      height: 35px; width: 35px;
+      top: unset;
+      bottom: 10%;
+      height: 35px;
+      width: 35px;
     }
 
-    .instiapp-spinner > .petal-bg {
+    .instiapp-spinner>.petal-bg {
       background-color: white;
       width: 230%;
       height: 230%;
@@ -82,7 +88,7 @@
       transform: translate(-50%, -25%);
     }
 
-    .instiapp-spinner > img {
+    .instiapp-spinner>img {
       height: 100%;
       transform-origin: bottom;
       opacity: 0.15;
@@ -91,25 +97,78 @@
       animation: spinner 2s infinite ease-in-out;
     }
 
-    .instiapp-spinner .petal-7 { transform: translateX(-50%) rotate(-67deg); -webkit-animation-delay: 0.09s; animation-delay: 0.09s; }
-    .instiapp-spinner .petal-6 { transform: translateX(-50%) rotate(-45deg); -webkit-animation-delay: 0.18s; animation-delay: 0.18s; }
-    .instiapp-spinner .petal-5 { transform: translateX(-50%) rotate(-20deg); -webkit-animation-delay: 0.27s; animation-delay: 0.27s; }
-    .instiapp-spinner .petal-4 { transform: translateX(-50%) rotate(00deg); -webkit-animation-delay: 0.36s; animation-delay: 0.36s; }
-    .instiapp-spinner .petal-3 { transform: translateX(-50%) rotate(20deg); -webkit-animation-delay: 0.45s; animation-delay: 0.45s; }
-    .instiapp-spinner .petal-2 { transform: translateX(-50%) rotate(45deg); -webkit-animation-delay: 0.54s; animation-delay: 0.54s; }
-    .instiapp-spinner .petal-1 { transform: translateX(-50%) rotate(67deg); -webkit-animation-delay: 0.63s; animation-delay: 0.63s; }
+    .instiapp-spinner .petal-7 {
+      transform: translateX(-50%) rotate(-67deg);
+      -webkit-animation-delay: 0.09s;
+      animation-delay: 0.09s;
+    }
+
+    .instiapp-spinner .petal-6 {
+      transform: translateX(-50%) rotate(-45deg);
+      -webkit-animation-delay: 0.18s;
+      animation-delay: 0.18s;
+    }
+
+    .instiapp-spinner .petal-5 {
+      transform: translateX(-50%) rotate(-20deg);
+      -webkit-animation-delay: 0.27s;
+      animation-delay: 0.27s;
+    }
+
+    .instiapp-spinner .petal-4 {
+      transform: translateX(-50%) rotate(00deg);
+      -webkit-animation-delay: 0.36s;
+      animation-delay: 0.36s;
+    }
+
+    .instiapp-spinner .petal-3 {
+      transform: translateX(-50%) rotate(20deg);
+      -webkit-animation-delay: 0.45s;
+      animation-delay: 0.45s;
+    }
+
+    .instiapp-spinner .petal-2 {
+      transform: translateX(-50%) rotate(45deg);
+      -webkit-animation-delay: 0.54s;
+      animation-delay: 0.54s;
+    }
+
+    .instiapp-spinner .petal-1 {
+      transform: translateX(-50%) rotate(67deg);
+      -webkit-animation-delay: 0.63s;
+      animation-delay: 0.63s;
+    }
 
     @keyframes spinner {
-      0% { opacity: 0.15;}
-      25% { opacity: 0.55; }
-      50% { opacity: 0.4; }
-      70% { opacity: 0.15; }
-      100% { opacity: 0.15; }
+      0% {
+        opacity: 0.15;
+      }
+
+      25% {
+        opacity: 0.55;
+      }
+
+      50% {
+        opacity: 0.4;
+      }
+
+      70% {
+        opacity: 0.15;
+      }
+
+      100% {
+        opacity: 0.15;
+      }
     }
 
     /* need to specify this here - workaround for static page width */
-    * { scrollbar-width: thin; }
-    ::-webkit-scrollbar { width: 6px; }
+    * {
+      scrollbar-width: thin;
+    }
+
+    ::-webkit-scrollbar {
+      width: 6px;
+    }
   </style>
 
   <app-root></app-root>
@@ -140,4 +199,5 @@
     window.jumpToUrl = jumpToUrl;
   </script>
 </body>
+
 </html>
