--- a/src/index.html
+++ b/src/index.html
@@ -9,25 +9,25 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#536dfe">
 
-  <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="assets/icons/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/icons/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="assets/icons/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="assets/icons/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/favicon.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/icons/favicon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/icons/favicon.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/icons/favicon.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/icons/favicon.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/icons/favicon.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/favicon.png">
+  <!-- <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-icon-192x192.png">-->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="msapplication-TileColor" content="#536dfe">
-  <meta name="msapplication-TileImage" content="assets/icons/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="assets/icons/favicon.png"> 
 
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-capable" content="no">
+  <meta name="apple-mobile-web-app-capable" content="no"> 
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -68,7 +68,7 @@
       height: 88px;
       width: 88px;
       transform: translateY(-50%);
-      z-index: 200;
+      z-index: 1000;
       visibility: visible;
     }
 
@@ -80,22 +80,30 @@
     }
 
     .instiapp-spinner>.petal-bg {
-      background-color: white;
+    
       width: 230%;
       height: 230%;
       border-radius: 50%;
       position: absolute;
       transform: translate(-50%, -25%);
+      justify-content: center;
+      align-items: center;
+      display: flex;
     }
 
-    .instiapp-spinner>img {
+    .gif-loader{
+      position:relative;
+      height: 200%;
+    }
+
+    /* .instiapp-spinner>img {
       height: 100%;
       transform-origin: bottom;
       opacity: 0.15;
       position: absolute;
       -webkit-animation: spinner 2s infinite ease-in-out;
       animation: spinner 2s infinite ease-in-out;
-    }
+    } */
 
     .instiapp-spinner .petal-7 {
       transform: translateX(-50%) rotate(-67deg);
@@ -174,14 +182,16 @@
   <app-root></app-root>
 
   <div id="instiapp-global-spinner" class="instiapp-spinner">
-    <div class="petal-bg"></div>
-    <img class="petal-1" src="assets/petal.svg">
+    <div class="petal-bg">
+    <img class="gif-loader" src="assets/s/anim_loader.gif" alt="">
+    </div>
+    <!-- <img class="petal-1" src="assets/petal.svg">
     <img class="petal-2" src="assets/petal.svg">
     <img class="petal-3" src="assets/petal.svg">
     <img class="petal-4" src="assets/petal.svg">
     <img class="petal-5" src="assets/petal.svg">
     <img class="petal-6" src="assets/petal.svg">
-    <img class="petal-7" src="assets/petal.svg">
+    <img class="petal-7" src="assets/petal.svg"> -->
   </div>
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700">
